--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,23 +8,23 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     .responsive_table {
         overflow-x: auto !important;
     }
-  
+
     .mat-table {
         min-width:800px;
     }
   }
-  
+
   .mat-row {
     height: auto;
   }
-  
+
   .mat-header-cell,.mat-cell {
     text-align: center !important;
     padding: 0px 8px 0px 15px !important;
   }
 
   .black-snackbar {
-    background: black !important;
+    background: rgb(255, 1, 1) !important;
     color: white !important;
   }
 
