--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,15 +8,15 @@
     </a>
     <ul>
       <li>
+
         <a (click)="handleSignupAction()">Signup</a>
         <a (click)="handleForgotPasswordAction()">Forgot Password</a>
         <a (click)="handleLoginAction()">Login</a>
-
 
       </li>
     </ul>
   </nav>
 </div>
 <div class="footer" id="signup">
-  <h2>All right reserved @BTech Days</h2>
+  <h2>All right reserved @koshi</h2>
 </div>
