--- a/src/app/material-component/dialog/view-bill-products/change-password/change-password.component.html
+++ b/src/app/material-component/dialog/view-bill-products/change-password/change-password.component.html
@@ -66,7 +66,7 @@
 <mat-dialog-actions align="end">
   <button mat-raised-button color="primary" type="submit" (click)="handlePasswordChangeSubmit()"
     [disabled]="!(changePasswordForm.valid && changePasswordForm.dirty)">
-    <mat-icon>save</mat-icon> Update
+    <mat-icon>login</mat-icon> Login
   </button>
   <button mat-raised-button color="warn" mat-dialog-close><mat-icon>cancel</mat-icon> Close</button>
 </mat-dialog-actions>
