--- a/src/app/material-component/manage-order/manage-order.component.html
+++ b/src/app/material-component/manage-order/manage-order.component.html
@@ -32,7 +32,8 @@
         <mat-form-field appearance="standard" fxFlex>
           <mat-label>Contact Number</mat-label>
           <input matInput formControlName="contactNumber" required>
-          <mat-error *ngIf="manageOrderForm.controls.contactNumber.touched && manageOrderForm.controls.contactNumber.invalid">
+          <mat-error
+            *ngIf="manageOrderForm.controls.contactNumber.touched && manageOrderForm.controls.contactNumber.invalid">
             <span *ngIf="manageOrderForm.controls.contactNumber.hasError('required')">This field is mandatory.</span>
             <span *ngIf="manageOrderForm.controls.contactNumber.hasError('pattern')">This field is invalid.</span>
           </mat-error>
@@ -45,7 +46,8 @@
             <mat-option value="Credit Card">Credit Card</mat-option>
             <mat-option value="Debit Card">Debit Card</mat-option>
           </mat-select>
-          <mat-error *ngIf="manageOrderForm.controls.paymentMethod.touched && manageOrderForm.controls.paymentMethod.invalid">
+          <mat-error
+            *ngIf="manageOrderForm.controls.paymentMethod.touched && manageOrderForm.controls.paymentMethod.invalid">
             <span *ngIf="manageOrderForm.controls.paymentMethod.hasError('required')">This field is mandatory.</span>
             <span *ngIf="manageOrderForm.controls.paymentMethod.hasError('pattern')">This field is invalid.</span>
           </mat-error>
@@ -56,66 +58,68 @@
 </mat-card>
 <hr>
 <mat-card>
-<b><span>Select Product :-</span></b>
-<form [formGroup]="manageOrderForm"><div fxFlex fxLayout="column">
-<div fxLayout="row wrap">
-  <mat-form-field appearance="standard" fxFlex>
-    <mat-label>Category</mat-label>
-    <mat-select formControlName="category" (selectionChange)="getProductByCategory($event.value)">
-      <mat-option *ngFor="let category of categorys" [value]="category">{{category.name}}</mat-option>
-    </mat-select>
-    <mat-error *ngIf="manageOrderForm.controls.category.touched && manageOrderForm.controls.category.invalid">
-      <span *ngIf="manageOrderForm.controls.category.hasError('required')">This field is mandatory.</span>
-      <span *ngIf="manageOrderForm.controls.category.hasError('pattern')">This field is invalid.</span>
-    </mat-error>
-  </mat-form-field>
+  <b><span>Select Product :-</span></b>
+  <form [formGroup]="manageOrderForm">
+    <div fxFlex fxLayout="column">
+      <div fxLayout="row wrap">
+        <mat-form-field appearance="standard" fxFlex>
+          <mat-label>Category</mat-label>
+          <mat-select formControlName="category" (selectionChange)="getProductByCategory($event.value)">
+            <mat-option *ngFor="let category of categorys" [value]="category">{{category.name}}</mat-option>
+          </mat-select>
+          <mat-error *ngIf="manageOrderForm.controls.category.touched && manageOrderForm.controls.category.invalid">
+            <span *ngIf="manageOrderForm.controls.category.hasError('required')">This field is mandatory.</span>
+            <span *ngIf="manageOrderForm.controls.category.hasError('pattern')">This field is invalid.</span>
+          </mat-error>
+        </mat-form-field>
 
-  <mat-form-field appearance="standard" fxFlex>
-    <mat-label>Product</mat-label>
-    <mat-select formControlName="product" (selectionChange)="getProductDetails($event.value) ">
-      <mat-option *ngFor="let product of products" [value]="product">{{product.name}}</mat-option>
-    </mat-select>
-    <mat-error *ngIf="manageOrderForm.controls.product.touched && manageOrderForm.controls.product.invalid">
-      <span *ngIf="manageOrderForm.controls.product.hasError('required')">This field is mandatory.</span>
-      <span *ngIf="manageOrderForm.controls.product.hasError('pattern')">This field is invalid.</span>
-    </mat-error>
-  </mat-form-field>
+        <mat-form-field appearance="standard" fxFlex>
+          <mat-label>Product</mat-label>
+          <mat-select formControlName="product" (selectionChange)="getProductDetails($event.value) ">
+            <mat-option *ngFor="let product of products" [value]="product">{{product.name}}</mat-option>
+          </mat-select>
+          <mat-error *ngIf="manageOrderForm.controls.product.touched && manageOrderForm.controls.product.invalid">
+            <span *ngIf="manageOrderForm.controls.product.hasError('required')">This field is mandatory.</span>
+            <span *ngIf="manageOrderForm.controls.product.hasError('pattern')">This field is invalid.</span>
+          </mat-error>
+        </mat-form-field>
 
-  <mat-form-field appearance="standard" fxFlex>
-    <mat-label>Price</mat-label>
-    <input matInput formControlName="price" required >
-    <mat-error *ngIf="manageOrderForm.controls.price.touched && manageOrderForm.controls.price.invalid">
-      <span *ngIf="manageOrderForm.controls.price.hasError('required')">This field is mandatory.</span>
-      <span *ngIf="manageOrderForm.controls.price.hasError('pattern')">This field is invalid.</span>
-    </mat-error>
-  </mat-form-field>
+        <mat-form-field appearance="standard" fxFlex>
+          <mat-label>Price</mat-label>
+          <input matInput formControlName="price" required>
+          <mat-error *ngIf="manageOrderForm.controls.price.touched && manageOrderForm.controls.price.invalid">
+            <span *ngIf="manageOrderForm.controls.price.hasError('required')">This field is mandatory.</span>
+            <span *ngIf="manageOrderForm.controls.price.hasError('pattern')">This field is invalid.</span>
+          </mat-error>
+        </mat-form-field>
 
-  <mat-form-field appearance="standard" fxFlex>
-    <mat-label>Quantity</mat-label>
-    <input matInput formControlName="quantity" required  (keyup)="setQuantity($event) " #input>
-    <mat-error *ngIf="manageOrderForm.controls.quantity.touched && manageOrderForm.controls.quantity.invalid">
-      <span *ngIf="manageOrderForm.controls.quantity.hasError('required')">This field is mandatory.</span>
-      <span *ngIf="manageOrderForm.controls.quantity.hasError('pattern')">This field is invalid.</span>
-    </mat-error>
-  </mat-form-field>
+        <mat-form-field appearance="standard" fxFlex>
+          <mat-label>Quantity</mat-label>
+          <input matInput formControlName="quantity" required (keyup)="setQuantity($event) " #input>
+          <mat-error *ngIf="manageOrderForm.controls.quantity.touched && manageOrderForm.controls.quantity.invalid">
+            <span *ngIf="manageOrderForm.controls.quantity.hasError('required')">This field is mandatory.</span>
+            <span *ngIf="manageOrderForm.controls.quantity.hasError('pattern')">This field is invalid.</span>
+          </mat-error>
+        </mat-form-field>
 
-  <mat-form-field appearance="standard" fxFlex>
-    <mat-label>Total</mat-label>
-    <input matInput formControlName="total" required readonly >
-    <mat-error *ngIf="manageOrderForm.controls.total.touched && manageOrderForm.controls.total.invalid">
-      <span *ngIf="manageOrderForm.controls.total.hasError('required')">This field is mandatory.</span>
-      <span *ngIf="manageOrderForm.controls.total.hasError('pattern')">This field is invalid.</span>
-    </mat-error>
-  </mat-form-field>
-</div>
-</div>
-</form>
-<div>
-  <button mat-flat-button color="primary" [disabled]="validateproductAdd()" (click)="add()" matTooltip="Add">Add</button>
-  <button mat-flat-button color="primary" class="float-right" matTooltip="Total Amount">
-    <mat-icon>monetization_on</mat-icon> Total Amount {{totalAmount}}
-  </button>
-</div>
+        <mat-form-field appearance="standard" fxFlex>
+          <mat-label>Total</mat-label>
+          <input matInput formControlName="total" required readonly>
+          <mat-error *ngIf="manageOrderForm.controls.total.touched && manageOrderForm.controls.total.invalid">
+            <span *ngIf="manageOrderForm.controls.total.hasError('required')">This field is mandatory.</span>
+            <span *ngIf="manageOrderForm.controls.total.hasError('pattern')">This field is invalid.</span>
+          </mat-error>
+        </mat-form-field>
+      </div>
+    </div>
+  </form>
+  <div>
+    <button mat-flat-button color="primary" [disabled]="validateproductAdd()" (click)="add()"
+      matTooltip="Add">Add</button>
+    <button mat-flat-button color="primary" class="float-right" matTooltip="Total Amount">
+      <mat-icon>monetization_on</mat-icon> Total Amount {{totalAmount}}
+    </button>
+  </div>
 </mat-card>
 <hr>
 
@@ -150,7 +154,7 @@
     <ng-container matColumnDef="edit">
       <th mat-header-cell *matHeaderCellDef>Delete</th>
       <td mat-cell *matCellDef="let element;let i = index" class="action-link">
-         <button mat-icon-button color="primary" matTooltip="Delete" (click)="handleDeleteAction(i,element)">
+        <button mat-icon-button color="primary" matTooltip="Delete" (click)="handleDeleteAction(i,element)">
           <mat-icon>delete</mat-icon>
         </button>
 
